# serenity-bottleneck

./: .env.example  .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
scripts/: install-cron.sh  serenity-daily.service  serenity-daily.timer
src/: config.py  types.py
src/calibration/: tracker.py
src/delivery/: feishu.py  report.py
src/engine/: evidence.py  json_util.py  llm.py  scorer.py  screener.py  supply_chain.py
src/knowledge/: database.py  obsidian.py
src/methodology/: methodology.md  themes.py
vault/Serenity-A股产业投研/01-主题/: AI 光互联 - CPO - 硅光.md  信创国产替代.md  先进封装 - 测试 - 设备材料.md  半导体自主可控 - 关键设备材料.md  数据中心电力 - 800VDC - 功率半导体.md  新能源装备与材料.md  机器人 - 具身智能硬件供应链.md  油气勘探设备与服务.md  精细化工与新材料.md
vault/Serenity-A股产业投研/02-候选/: 万华化学 600309.SH.md  三花智控 002050.SZ.md  东微半导 688261.SH.md  东方国信 300166.SZ.md  东方通 300379.SZ.md  东材科技 601208.SH.md  中国西电 601179.SH.md  中国软件 600536.SH.md  中国长城 000066.SZ.md  中大力德 002896.SZ.md  中微公司 688012.SH.md  中恒电气 002364.SZ.md  中旗新材 001212.SZ.md  中油工程 600339.SH.md  中海油服 601808.SH.md  中科曙光 603019.SH.md  中船特气 688146.SH.md  中际旭创 300308.SZ.md  云南锗业 002428.SZ.md  五洲新春 603667.SH.md  仕佳光子 688313.SH.md  光库科技 300620.SZ.md  光迅科技 002281.SZ.md  兴森科技 002436.SZ.md  利安隆 300596.SZ.md  北方华创 002371.SZ.md  华大九天 301269.SZ.md  华天科技 002185.SZ.md  华工科技 000988.SZ.md  南大光电 300346.SZ.md  博迈科 603727.SH.md  双环传动 002472.SZ.md  同兴达 002845.SZ.md  圣邦股份 300661.SZ.md  士兰微 600460.SH.md  天孚通信 300394.SZ.md  天岳先进 688234.SH.md  宁德时代 300750.SZ.md  安集科技 688019.SH.md  宏微科技 688711.SH.md  (+50 more)
vault/Serenity-A股产业投研/05-校准/: 校准报告_20260702.md
