[project]
name = "serenity-bottleneck"
version = "0.1.0"
description = "Serenity-style supply-chain chokepoint research agent for A-share"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
serenity = "main:main"
